--- a/public/global.css
+++ b/public/global.css
@@ -9,6 +9,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-family: Arial, sans-serif;
+  font-size: 16px;
   text-align: center;
   width: 100%;
   height: 100%;
