--- a/public/global.css
+++ b/public/global.css
@@ -8,7 +8,8 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Arial, sans-serif;
+  font-family: 'Open Sans', Arial, sans-serif;
+  font-weight: 400;
   font-size: 16px;
   text-align: center;
   width: 100%;
