--- a/style.css
+++ b/style.css
@@ -16,3 +16,19 @@ body {
   height: 100%;
   background: #1e5799;
 }
+
+#root {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  align-content: center;
+  height: 100%;
+  background: linear-gradient(
+      to bottom,
+      #1e5799 0%,
+      #2989d8 50%,
+      #7db9e8 100%
+  );
+  color: #fff;
+}
