--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,12 @@ body {
   font-weight: 400;
   font-size: 16px;
   text-align: center;
-  width: 100%;
-  height: 100%;
-  background: #1e5799;
+  background: linear-gradient(
+    to bottom,
+    hsl(210, 67%, 30%) 0%,
+    hsl(210, 69%, 45%) 50%,
+    hsl(210, 70%, 62%) 100%
+  );
 }
 
 #root {
